# ZMP_2025

./: .gitignore  Makefile  interp  przyklad.cmd
config/: config.xml
inc/: AbstractInterp4Command.hh  AbstractMobileObj.hh  ComChannel.hh  ComInterface.hh  Configuration.hh  LibInterface.hh  Makefile.am  MobileObj.hh  PlugInContainer.hh  Scene.hh  Vector3D.hh  geomVector.hh  main.hh  xmlinterp.hh
inc/XML/: Configuration.hh  ObjectFromXML.hh  xmlinterp.hh
inc/klient/: GeomObj.hh  Port.hh  Scena.hh  Scene.hh  Sender.hh  klientmain.hh
klient/inc/: GeomObj.hh  Scene.hh  Sender.hh
klient/src/: klient.cpp
plugin/: Makefile
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
serwer-z-tlem-Qt6/: serwer_graficzny
serwer-z-tlem-Qt6/libQGLViewer/: Makefile
serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/: Makefile  libQGLViewer-qt6.prl  libQGLViewer-qt6.so.2.9.1  ui_ImageInterface.h  ui_VRenderInterface.h
serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/.moc/: moc_camera.cpp  moc_frame.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_predefs.h  moc_qglviewer.cpp
serwer-z-tlem-Qt6/libQGLViewer/examples/: Makefile
serwer-z-tlem-Qt6/libQGLViewer/examples/animation/: Makefile  animation
serwer-z-tlem-Qt6/libQGLViewer/examples/callback/: Makefile  callback
src/: ComInterface.cpp  LibInterface.cpp  Makefile.am  PlugInContainer.cpp  Scene.cpp  main.cpp  preprocesorCmd.cpp  xmlinterp.cpp
(+48 files in other folders)
