noinst_HEADERS= AbstractComChannel.hh \
AbstractInterp4Command.hh \
AbstractMobileObj.hh \
AbstractScene.hh \
ComChannel.hh \
ComInterface.hh \
geomVector.hh \
LibInterface.hh \
main.hh \
MobileObj.hh \
PlugInContainer.hh \
Scene.hh \
Vector3D.hh \
XML/Configuration.hh \
XML/xmlinterp.hh \
XML/ObjectFromXML.hh \
klient/Port.hh
