bin_PROGRAMS=interp4rob
interp4rob_SOURCES = main.cpp \
                     ComInterface.cpp \
                     LibInterface.cpp \
                     PlugInContainer.cpp \
                     preprocesorCmd.cpp \
                     Scene.cpp \
                     xmlinterp.cpp 
interp4rob_CXXFLAGS = -I../inc -I../../../inc
